--- a/css/media.css
+++ b/css/media.css
@@ -1,36 +1,112 @@
 @media (max-width:768px) {
-    .main_title{
+    .main_title {
         display: inline;
 
     }
-    .service_cards{
+
+    .service_cards {
         display: inline;
         justify-content: center;
         position: relative;
         left: 200px;
-    
+
     }
 
-    .project_cards .team_cards{
+    .project_cards .team_cards {
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
-    .team_cards{
+    .team_cards {
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
         margin-left: 100px;
     }
-    
+
 }
 
 @media (max-width:375px) {
-    .none{
+    .none {
         display: none
     }
-    .nav_text{
+
+    .nav_text {
         display: flex;
- 
+
+    }
+
+    .main_h1 {
+        font-size: 25px;
+    }
+
+    .main_p {
+        font-size: 15px;
+    }
+
+    .main_btn {
+        width: 110px;
+        height: 50px;
+        font-weight: 250;
+        font-size: 15px;
+    }
+
+    .service_card1 {
+        position: relative;
+        right: 150px;
+    }
+
+    .project_cards {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .project_card1 {
+        margin-left: 10px;
+    }
+
+    .team_cards {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .team_card1 {
+        position: relative;
+        right: 40px;
+
+    }
+
+}
+
+
+@media (max-width:1024px) {
+    .main_btn {
+        width: 110px;
+        height: 50px;
+        font-weight: 250;
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
+
+    
+    .project_cards {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .team_cards {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .service_cards {
+        display: inline;
+        justify-content: center;
+        position: relative;
+        left: 200px;
+
+    }
+    .main_h1{
+        font-size: 20px;
     }
 
 }
